<resources>
    <string name="app_name">StopWatch</string>
    <string name="start_watch">开始</string>
    <string name="stop_watch">停止</string>
    <string name="refresh_watch">重置</string>
    <string name="start_time">00:00:00</string>
    <string name="num_count">计次</string>
    <string name="test_btn">测试按钮</string>
    <string name="image_recycler_test">图片列表测试</string>
    <string name="title_activity_image_recycler">ImageRecyclerActivity</string>
</resources>
